--- a/Reserve.html
+++ b/Reserve.html
@@ -41,6 +41,41 @@
     <div class="row">
         <h3 class="cover-heading mb-4">Reserve a Table</h3>
     </div>
+    <div class="row text-center">
+      <div class="col-md-4">
+          <card class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Table 1</h5>
+                <p class="card-text">Seats: 4</p>
+                <p class="card-text">Shape: standard</p>                
+                <button type="submit" class="btn btn-primary">Reserve</button>
+              </div>
+            </card>
+        </div>
+        <div class="col-md-4">
+            <card class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Table 1</h5>
+                  <p class="card-text">Seats: 1</p>
+                  <p class="card-text">Shape: Bar</p>                
+                  <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+              </card>
+          </div>
+          <div class="col-md-4">
+              <card class="card">
+                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Table 1</h5>
+                    <p class="card-text">Seats: 4</p>
+                    <p class="card-text">Shape: standard</p>                
+                    <button type="submit" class="btn btn-primary">Reserve</button>
+                  </div>
+                </card>
+            </div>
+    </div>
 
   </main>
   
